# IronRAG.ConnectorTemplate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.example.yml  pyproject.toml  routing.yaml.example
docs/: ARCHITECTURE.md
examples/echo_connector/: pyproject.toml
examples/echo_connector/src/echo_connector/: __init__.py  __main__.py  adapter.py
src/ironrag_connector/: __init__.py  __main__.py  config.py  ironrag.py  observability.py  orchestrator.py  pidfile.py  policy.py  routing.py  seed.py  server.py  source.py  state.py  sync.py
tests/: conftest.py  test_ironrag_client.py  test_orchestrator.py  test_policy.py  test_routing.py  test_seed.py  test_server.py  test_state.py  test_sync_manager.py
