[project]
name = "echo-connector"
version = "0.1.0"
description = "Minimal reference connector — serves an in-memory bag of fake pages."
requires-python = ">=3.12"
dependencies = [
    "ironrag-connector",
]

[project.scripts]
echo-connector = "echo_connector.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/echo_connector"]
